# sentinel-sre-agent

./: .gitignore  README.md  api_server.py  pyproject.toml  requirements.txt
agents/: sentinel_agent.py
modules/: rca_brain.py  train_brain.py
servers/: ops_server.py
tests/: test_logic.py
